HEAD
	+ Bugfix: indexer was always started ignoring value of zarafa_indexer
2.0.4
	+ Bugfix: create contact even if create account is disabled on User
	  Template
	+ Only show groups with mail alias on Zarafa GAL
	+ Add support to manage ICAL server
	+ Add configuration file 80zarafa.conf for advanced configuration
	+ Deleted webserver from depends
2.0.3
	+ Add support to show disabled accounts as contacts
	+ Add script to purge orphaned stores
	+ Set the right permissions and group for certificates issued by
	  CA module
	+ Improved performance by adding zarafaAccount LDAP index.
2.0.2
	+ Added create/delete account hooks support.
2.0.1
	+ Bugfix: add zarafaQuotaOverride to localAttributes.
2.0
	+ Add ActiveSync support.
	+ Improve help messages.
1.5
	+ Initial release.