@@ -15,3 +15,6 @@ zarafa_always_send_delegates = no
 
 # use zarafa-indexer
 zarafa_indexer = yes
+
+# manage zarafa-licensed (needs zarafa-licensed package installed)
+zarafa_licensed = no
